# chess-analytics

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  stack.yml
.github/workflows/: ci-prod.yaml
src/api_requests/: api_data_formatting.py  async_requests.py  data_prep.py  sync_requests.py
src/chess_analytics/: app.py  figures_template.py
src/chess_analytics/assets/animations/: jumping_knight.json
src/chess_analytics/assets/css/: custom_dcc.css  global.css  highcharts.css
src/chess_analytics/components/: app_layout.py  loading_overlay.py  player_info_banner.py  player_not_found.py
src/chess_analytics/pages/home/: home.py
src/chess_analytics/pages/player/: player.py
src/chess_analytics/pages/player/components/: tab_history.py  tab_stats.py
src/chess_analytics/pages/player/components/history/: player_rankings.py  player_recent_games.py
src/chess_analytics/pages/player/components/stats/: gamemode_card.py  graph_card.py  openings_card.py  openings_ratio_bar.py  ratio_bar.py
src/chess_analytics/pages/player/figures/: demo_highchart_piechart.py  gamemode_ranking_linechart.py  gamemode_ranking_linechart_plotly.py  gamemodes_piechart.py  games_histogram.py  outcome_piechart.py  piechart_win_ratio_plotly.py  win_ratio_piechart.py
